[gd_scene load_steps=47 format=3 uid="uid://byli3ck6gpqtc"]

[ext_resource type="Script" uid="uid://dk25ownu14rv8" path="res://actors/pawns/player/player.gd" id="1_onrkg"]
[ext_resource type="Script" uid="uid://dvwl8eddefr5k" path="res://actors/pawns/player/player_camera.gd" id="2_qrxv1"]
[ext_resource type="Script" uid="uid://cu2mhoqnrgeam" path="res://input/hotbar_input.gd" id="4_yw30f"]
[ext_resource type="Script" uid="uid://cg3y6l7u7bglb" path="res://actors/pawns/player/interact_detector.gd" id="5_hiosj"]
[ext_resource type="Script" uid="uid://c0e61g0mwp78t" path="res://actors/pawns/player/player_containers.gd" id="5_nvisx"]
[ext_resource type="Script" uid="uid://dsrxhicfffw3e" path="res://actors/pawns/player/pickup_detector.gd" id="5_qjkh3"]
[ext_resource type="Shader" uid="uid://cypb182ofc63b" path="res://shaders/outline.gdshader" id="7_fptfb"]
[ext_resource type="Script" uid="uid://c5rhs0y5iry7d" path="res://input/mouse_input.gd" id="9_388e2"]
[ext_resource type="Shader" uid="uid://48ta4ahe0rkq" path="res://shaders/character_sprite.gdshader" id="9_fptfb"]
[ext_resource type="Script" uid="uid://co0hu31xc486a" path="res://item/item_container.gd" id="10_lsln6"]
[ext_resource type="Script" uid="uid://dplrhtm2y2ben" path="res://actors/pawns/player/player_interaction.gd" id="12_ssdk0"]
[ext_resource type="Script" uid="uid://chxhldiu0nvle" path="res://input/world_container_input.gd" id="13_7aotg"]
[ext_resource type="PackedScene" uid="uid://dfb3edd4wnnag" path="res://actors/pawns/character_sprite.tscn" id="13_k67x5"]
[ext_resource type="Texture2D" uid="uid://csxjjom3dyxfa" path="res://actors/pawns/sprites/head/white_head_1.png" id="14_0wchr"]
[ext_resource type="Texture2D" uid="uid://oyto6h4h2ewn" path="res://actors/pawns/sprites/torso/torso_blue_jacket.png" id="15_qrxv1"]
[ext_resource type="Texture2D" uid="uid://wcmxajlvsg1i" path="res://actors/pawns/sprites/leg/legs_black_1.png" id="17_otn2r"]
[ext_resource type="Script" uid="uid://kesirm75pc1q" path="res://item/generic/pawn_equipment.gd" id="20_lj3dd"]
[ext_resource type="Script" uid="uid://dflsf7ovo0jqw" path="res://item/generic/item_display.gd" id="20_nsxbo"]
[ext_resource type="Texture2D" uid="uid://c8u4rr4xtq3tj" path="res://actors/pawns/player/spot_light.png" id="20_otn2r"]
[ext_resource type="Script" uid="uid://c8dnwtjdg5wbq" path="res://audio/footsteps.gd" id="21_ctwkf"]
[ext_resource type="Script" uid="uid://bbp3ruk8jvfsw" path="res://actors/pawns/player/equipped_hotbar_inst.gd" id="24_nsxbo"]
[ext_resource type="Script" uid="uid://dfsam3b8d27hq" path="res://input/equipment_input.gd" id="24_yeioo"]
[ext_resource type="Script" uid="uid://dscssqnu3m0h1" path="res://misc/item_inserter.gd" id="25_fptfb"]
[ext_resource type="Script" uid="uid://ctutx861f7ofh" path="res://input/context_input.gd" id="26_h0lia"]
[ext_resource type="Resource" uid="uid://dl4jalxjxqdxk" path="res://item/items/wooden_spear/wooden_spear.tres" id="26_yr7qf"]
[ext_resource type="Script" uid="uid://cvf4ycidd0cme" path="res://actors/pawns/player/player_crafting.gd" id="27_h0lia"]
[ext_resource type="Resource" uid="uid://dhkvadvqgfe7u" path="res://crafting/blueprints/blueprint_wooden_barricade.tres" id="29_pxsft"]
[ext_resource type="Script" uid="uid://c0igk80mo7ba7" path="res://crafting/blueprint.gd" id="29_s6245"]
[ext_resource type="Resource" uid="uid://ccuug6iyhqu4u" path="res://crafting/blueprints/blueprint_mini_turret.tres" id="29_ygih8"]
[ext_resource type="Resource" uid="uid://bectdwfnrpirh" path="res://crafting/blueprints/blueprint_wooden_ballista.tres" id="30_qg747"]
[ext_resource type="Resource" uid="uid://cm5rcgysn4fkm" path="res://crafting/blueprints/blueprint_wooden_spear.tres" id="30_qqc64"]
[ext_resource type="Resource" uid="uid://bag3yiaad1f5p" path="res://item/items/tiles/defense/item_mini_turret.tres" id="31_s6245"]
[ext_resource type="Resource" uid="uid://c5fc8j3i8g611" path="res://crafting/blueprints/blueprint_cannon.tres" id="31_wgd3t"]
[ext_resource type="Resource" uid="uid://bxegj0aw5s18c" path="res://item/items/scrap/scrap.tres" id="32_qqc64"]
[ext_resource type="Resource" uid="uid://didp84x63i7vu" path="res://crafting/blueprints/blueprint_wooden_wall.tres" id="32_u5ndj"]
[ext_resource type="Script" uid="uid://d1jitd8ecvh0i" path="res://actors/pawns/player/player_build_highlight.gd" id="34_5hbjc"]
[ext_resource type="Texture2D" uid="uid://c8oaaom1olacl" path="res://ui/white_outline.png" id="35_ed5vm"]
[ext_resource type="Script" uid="uid://ce3pc3v2y36cc" path="res://actors/pawns/player/player_coins.gd" id="35_pxsft"]
[ext_resource type="Script" uid="uid://b524hsh0tyeu5" path="res://actors/pawns/player/player_defenses.gd" id="39_0lo4q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkbax"]
size = Vector2(25, 54)

[sub_resource type="CircleShape2D" id="CircleShape2D_yw30f"]
radius = 200.01

[sub_resource type="CircleShape2D" id="CircleShape2D_lsln6"]
radius = 156.0032

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h0lia"]
shader = ExtResource("7_fptfb")
shader_parameter/allow_out_of_bounds = true
shader_parameter/outline_thickness = 1.0
shader_parameter/outline_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yr7qf"]
resource_local_to_scene = true
shader = ExtResource("9_fptfb")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_percentage = 0.0

[sub_resource type="Gradient" id="Gradient_dqf5y"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_otn2r"]
gradient = SubResource("Gradient_dqf5y")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("camera", "containers", "coins", "inventory", "hotbar", "hotbar_equipped_inst", "pickups", "player_crafting", "player_defenses", "hotbar_input", "world_container_input", "context_input") groups=["persist", "player"]]
z_index = 11
collision_layer = 4
collision_mask = 38
script = ExtResource("1_onrkg")
speed = 700
camera = NodePath("Camera2D")
containers = NodePath("Containers")
coins = NodePath("PlayerCoins")
inventory = NodePath("Containers/Inventory")
hotbar = NodePath("Containers/Hotbar")
hotbar_equipped_inst = NodePath("HotbarEquippedInst")
pickups = NodePath("Containers/Pickups")
player_crafting = NodePath("PlayerCrafting")
player_defenses = NodePath("PlayerDefenses")
hotbar_input = NodePath("Inputs/HotbarInput")
world_container_input = NodePath("Inputs/WorldContainerInput")
context_input = NodePath("Inputs/ContextInput")
faction = 1
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
script = ExtResource("2_qrxv1")
zoom_speed = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 5)
shape = SubResource("RectangleShape2D_rkbax")

[node name="PickupRadius" type="Area2D" parent="." node_paths=PackedStringArray("pickup_container")]
visible = false
collision_layer = 0
collision_mask = 8
script = ExtResource("5_qjkh3")
pickup_container = NodePath("../Containers/Pickups")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRadius"]
shape = SubResource("CircleShape2D_yw30f")

[node name="InteractableDetector" type="Area2D" parent="." node_paths=PackedStringArray("player", "raycast")]
visible = false
collision_layer = 0
collision_mask = 16
script = ExtResource("5_hiosj")
player = NodePath("..")
raycast = NodePath("RayCast2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableDetector"]
shape = SubResource("CircleShape2D_lsln6")

[node name="RayCast2D" type="RayCast2D" parent="InteractableDetector"]
collision_mask = 17

[node name="Containers" type="Node2D" parent="." node_paths=PackedStringArray("hotbar_container", "inventory_container")]
script = ExtResource("5_nvisx")
hotbar_container = NodePath("Hotbar")
inventory_container = NodePath("Inventory")

[node name="Inventory" type="Node" parent="Containers"]
script = ExtResource("10_lsln6")
capacity = 4
metadata/_custom_type_script = "uid://co0hu31xc486a"

[node name="Hotbar" type="Node" parent="Containers"]
script = ExtResource("10_lsln6")
capacity = 9
container_name = 1
metadata/_custom_type_script = "uid://co0hu31xc486a"

[node name="Pickups" type="Node" parent="Containers"]
script = ExtResource("10_lsln6")
capacity = 8
container_name = 2
metadata/_custom_type_script = "uid://co0hu31xc486a"

[node name="PlayerInteraction" type="Node2D" parent="." node_paths=PackedStringArray("interact_detector", "context_input", "player")]
script = ExtResource("12_ssdk0")
interact_detector = NodePath("../InteractableDetector")
context_input = NodePath("../Inputs/ContextInput")
player = NodePath("..")
outline_material = SubResource("ShaderMaterial_h0lia")

[node name="CharacterSprite" parent="." node_paths=PackedStringArray("target_supplier") instance=ExtResource("13_k67x5")]
material = SubResource("ShaderMaterial_yr7qf")
target_supplier = NodePath("../Inputs/MouseInput")
head_texture = ExtResource("14_0wchr")
torso_texture = ExtResource("15_qrxv1")
left_leg_texture = ExtResource("17_otn2r")
right_leg_texture = ExtResource("17_otn2r")

[node name="Lights" type="Node2D" parent="."]
visible = false

[node name="AmbientLight" type="PointLight2D" parent="Lights"]
texture_filter = 1
color = Color(0.5, 0.5, 0.5, 1)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
texture = SubResource("GradientTexture2D_otn2r")
texture_scale = 50.0

[node name="Node2D" type="Node2D" parent="Lights"]
visible = false
scale = Vector2(0.64000016, 4.000001)

[node name="Flashlight" type="PointLight2D" parent="Lights/Node2D"]
texture_filter = 1
position = Vector2(360, 0)
energy = 0.38
texture = ExtResource("20_otn2r")
texture_scale = 2.82

[node name="Items" type="Node2D" parent="."]

[node name="Equipment" type="Node" parent="Items" node_paths=PackedStringArray("user", "inst_provider", "target_provider", "item_display", "character_sprite")]
script = ExtResource("20_lj3dd")
user = NodePath("../..")
inst_provider = NodePath("../../HotbarEquippedInst")
target_provider = NodePath("../../Inputs/MouseInput")
item_display = NodePath("../ItemDisplay")
character_sprite = NodePath("../../CharacterSprite")
metadata/_custom_type_script = "uid://kesirm75pc1q"

[node name="ItemDisplay" type="Node2D" parent="Items" node_paths=PackedStringArray("user", "instance_supplier", "target_supplier")]
script = ExtResource("20_nsxbo")
user = NodePath("../..")
instance_supplier = NodePath("../../HotbarEquippedInst")
target_supplier = NodePath("../../Inputs/MouseInput")
metadata/_custom_type_script = "uid://dflsf7ovo0jqw"

[node name="Inputs" type="Node2D" parent="."]

[node name="HotbarInput" type="Node" parent="Inputs"]
script = ExtResource("4_yw30f")
metadata/_custom_type_script = "uid://cu2mhoqnrgeam"

[node name="MouseInput" type="Node2D" parent="Inputs"]
script = ExtResource("9_388e2")
metadata/_custom_type_script = "uid://c5rhs0y5iry7d"

[node name="WorldContainerInput" type="Node" parent="Inputs" node_paths=PackedStringArray("interact_detector")]
script = ExtResource("13_7aotg")
interact_detector = NodePath("../../InteractableDetector")
metadata/_custom_type_script = "uid://chxhldiu0nvle"

[node name="EquipmentInput" type="Node2D" parent="Inputs"]
script = ExtResource("24_yeioo")
metadata/_custom_type_script = "uid://dfsam3b8d27hq"

[node name="ContextInput" type="Node2D" parent="Inputs"]
script = ExtResource("26_h0lia")
metadata/_custom_type_script = "uid://ctutx861f7ofh"

[node name="HotbarEquippedInst" type="Node2D" parent="." node_paths=PackedStringArray("hotbar_container", "hotbar_input")]
script = ExtResource("24_nsxbo")
hotbar_container = NodePath("../Containers/Hotbar")
hotbar_input = NodePath("../Inputs/HotbarInput")
metadata/_custom_type_script = "uid://bbp3ruk8jvfsw"

[node name="Footsteps" type="Node2D" parent="." node_paths=PackedStringArray("character_sprite")]
script = ExtResource("21_ctwkf")
character_sprite = NodePath("../CharacterSprite")
metadata/_custom_type_script = "uid://c8dnwtjdg5wbq"

[node name="PlayerCrafting" type="Node2D" parent="." node_paths=PackedStringArray("coins", "player_containers")]
script = ExtResource("27_h0lia")
coins = NodePath("../PlayerCoins")
blueprints = Array[ExtResource("29_s6245")]([ExtResource("30_qqc64"), ExtResource("29_ygih8"), ExtResource("29_pxsft"), ExtResource("30_qg747"), ExtResource("31_wgd3t"), ExtResource("32_u5ndj")])
player_containers = NodePath("../Containers")
metadata/_custom_type_script = "uid://cvf4ycidd0cme"

[node name="debug" type="Node" parent="."]

[node name="ItemInserter2" type="Node2D" parent="debug" node_paths=PackedStringArray("hotbar")]
script = ExtResource("25_fptfb")
hotbar = NodePath("../../Containers/Hotbar")
itemdata = ExtResource("31_s6245")
amount = 1
index = 1

[node name="ItemInserter" type="Node2D" parent="debug" node_paths=PackedStringArray("hotbar")]
script = ExtResource("25_fptfb")
hotbar = NodePath("../../Containers/Hotbar")
itemdata = ExtResource("26_yr7qf")
amount = 1

[node name="ItemInserter3" type="Node2D" parent="debug" node_paths=PackedStringArray("hotbar")]
script = ExtResource("25_fptfb")
hotbar = NodePath("../../Containers/Hotbar")
itemdata = ExtResource("32_qqc64")
amount = 20
index = 2

[node name="PlayerBuildHighlight" type="Node2D" parent="." node_paths=PackedStringArray("player", "mouse_input", "instance_provider", "tile_highlight")]
script = ExtResource("34_5hbjc")
player = NodePath("..")
mouse_input = NodePath("../Inputs/MouseInput")
instance_provider = NodePath("../HotbarEquippedInst")
tile_highlight = NodePath("Sprite2D")
metadata/_custom_type_script = "uid://d1jitd8ecvh0i"

[node name="Sprite2D" type="Sprite2D" parent="PlayerBuildHighlight"]
scale = Vector2(4, 4)
texture = ExtResource("35_ed5vm")

[node name="PlayerCoins" type="Node2D" parent="."]
script = ExtResource("35_pxsft")
starting_coins = 1000
metadata/_custom_type_script = "uid://ce3pc3v2y36cc"

[node name="PlayerDefenses" type="Node2D" parent="." node_paths=PackedStringArray("player_crafting")]
script = ExtResource("39_0lo4q")
player_crafting = NodePath("../PlayerCrafting")
metadata/_custom_type_script = "uid://b524hsh0tyeu5"

[connection signal="area_entered" from="PickupRadius" to="PickupRadius" method="_on_area_entered"]
[connection signal="area_exited" from="PickupRadius" to="PickupRadius" method="_on_area_exited"]
[connection signal="origin_position_emitted" from="Items/ItemDisplay" to="CharacterSprite" method="_set_right_hand_pos"]
[connection signal="origin_position_emitted" from="Items/ItemDisplay" to="CharacterSprite" method="_set_left_hand_pos"]
[connection signal="mouse_position" from="Inputs/MouseInput" to="CharacterSprite" method="_set_target"]
[connection signal="mouse_position" from="Inputs/MouseInput" to="Items/ItemDisplay" method="_update_target"]
[connection signal="use_equipment" from="Inputs/EquipmentInput" to="Items/Equipment" method="use"]
[connection signal="holding_nothing" from="HotbarEquippedInst" to="CharacterSprite" method="_disable_left_hand"]
[connection signal="holding_nothing" from="HotbarEquippedInst" to="CharacterSprite" method="_disable_right_hand"]
[connection signal="holding_something" from="HotbarEquippedInst" to="CharacterSprite" method="_enable_right_hand"]
[connection signal="holding_something" from="HotbarEquippedInst" to="CharacterSprite" method="_enable_left_hand"]
